--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
     <div class="container">
-        <h2 class="text-center">New <%= note.title %></h2>
+        <h2 class="text-center">Edit <%= note.title %></h2>
         <form action="/notes/<%= note._id %>?_method=PUT" method="POST">
             <div id="note-title" class="ui">
                 <input type="text" name="note[title]" value="<%= note.title %>">
@@ -11,7 +11,7 @@
             </div>
             <div id="buttons" class="ui">
                 <input type="submit" value="SUBMIT">
-                <a href="/notes">cancel</a>
+                <a href="/notes/<%= note._id %>">cancel</a>
             </div>
         </form>
     </div>
