--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,5 +15,5 @@
 <body>
     <header class="container">
         <h1>My Notes Aplication</h1>
-        <a href="/notes/new" class="new-btn">new</a>
+        <a href="#" class="new-btn">new</a>
     </header>
